{
    "name": "PlayerActions",
    "maps": [
        {
            "name": "Movement",
            "id": "f1016b95-7426-4f57-a20e-5bc1f434633c",
            "actions": [
                {
                    "name": "BackwardForward",
                    "type": "Value",
                    "id": "7123e4b5-0fca-48fa-9a04-8ea8828fae03",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LeftRight",
                    "type": "Button",
                    "id": "db4bc612-5e7a-48fc-bfdf-44cdd37b3874",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "c824a8c3-5ac4-4f32-8c4a-5e4f3ee9903c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Crouch",
                    "type": "Button",
                    "id": "6867907b-688c-44a3-ae2b-b3d72b2b8e63",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Run",
                    "type": "Button",
                    "id": "9bd82c43-498e-49cd-a996-a02120adb63d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "3baa2ae6-40cd-4693-934f-b3de97676413",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BackwardForward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "97772d4f-368a-4fce-8912-b91a740c2722",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "Scale(factor=-1)",
                    "groups": "",
                    "action": "BackwardForward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e6c759d7-c300-40a8-ae50-3e4e4ce77011",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1632439a-4a84-40b6-814d-7cbbaa4895c5",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "Scale(factor=-1)",
                    "groups": "",
                    "action": "LeftRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "928511e8-e2ab-4f20-b48d-b4780b4f4aac",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a0fbd2d6-eeb3-40a1-913f-3cf8407d32a8",
                    "path": "<Keyboard>/leftCtrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Crouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e6af54fd-48ae-421c-8059-3da8f2993dd2",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Run",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Head",
            "id": "80c750b7-6221-4a48-8169-bffd26d97165",
            "actions": [
                {
                    "name": "MouseDelta",
                    "type": "Value",
                    "id": "f05e8b5f-9891-48fb-8d16-a955e147f036",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c8532306-91bf-4cf7-b39b-0b347531c68d",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseDelta",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Interaction",
            "id": "27317bd9-7b6f-4835-bca8-634027acc513",
            "actions": [
                {
                    "name": "MainInteraction",
                    "type": "Button",
                    "id": "8b4c74a9-f965-4c23-8ddb-6566eada7343",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c96bd803-14a7-4729-8fc7-ec392cea42bf",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MainInteraction",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}